Added login flow, can now create account in user pool from client.

--- a/amplify/#current-cloud-backend/backend-config.json
+++ b/amplify/#current-cloud-backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "ostomateappb819ad14": {
+    "ostomateapp": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
@@ -11,11 +11,20 @@
           "EMAIL"
         ],
         "signupAttributes": [
-          "EMAIL"
+          "ADDRESS",
+          "EMAIL",
+          "FAMILY_NAME",
+          "GIVEN_NAME",
+          "PHONE_NUMBER"
         ],
         "passwordProtectionSettings": {
           "passwordPolicyMinLength": 8,
-          "passwordPolicyCharacters": []
+          "passwordPolicyCharacters": [
+            "REQUIRES_LOWERCASE",
+            "REQUIRES_NUMBERS",
+            "REQUIRES_SYMBOLS",
+            "REQUIRES_UPPERCASE"
+          ]
         },
         "mfaConfiguration": "OFF",
         "mfaTypes": [
