able to run on iOS

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ doc/api/
 .flutter-plugins
 .flutter-plugins-dependencies
 
+.DS_Store
+
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
