--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   amplify_auth_cognito: ^0.6.0
   amplify_analytics_pinpoint: ^0.6.0
   flutter_login: ^4.0.0
+  provider: ^6.0.3
 
 
 dev_dependencies:
