--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   amplify_analytics_pinpoint: ^0.6.0
   flutter_login: ^4.0.0
   provider: ^6.0.3
+  control_style: ^0.0.2
 
 
 dev_dependencies:
