--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,3 +114,6 @@ flutter:
     - family: Bebas Neue
       fonts:
         - asset: fonts/BebasNeue-Regular.ttf
+    - family: Source Sans Pro
+      fonts:
+        - asset: fonts/SourceSansPro-Regular.ttf
